{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 15,
  "lineage": "22363b3e-274a-3a04-1415-63cd0a98930e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08992b01e85cd60fc",
            "domain": "vpc",
            "id": "eipalloc-08992b01e85cd60fc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-221-162-25.compute-1.amazonaws.com",
            "public_ip": "44.221.162.25",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632653723581:internet-gateway/igw-025e7e615a2f92e7b",
            "id": "igw-025e7e615a2f92e7b",
            "owner_id": "632653723581",
            "tags": {
              "Name": "gw"
            },
            "tags_all": {
              "Name": "gw"
            },
            "vpc_id": "vpc-00819df1d4b2634c6"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08992b01e85cd60fc",
            "association_id": "eipassoc-049907866ad7ba4e9",
            "connectivity_type": "public",
            "id": "nat-0db03b79968f20662",
            "network_interface_id": "eni-048ed9536460cfa5b",
            "private_ip": "10.0.1.110",
            "public_ip": "44.221.162.25",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05be315999c20fa64",
            "tags": {
              "Name": "gw"
            },
            "tags_all": {
              "Name": "gw"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public-sub1",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632653723581:route-table/rtb-0a534a558f7ce0883",
            "id": "rtb-0a534a558f7ce0883",
            "owner_id": "632653723581",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0db03b79968f20662",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-00819df1d4b2634c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-sub1",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632653723581:route-table/rtb-08e2be5651d703b68",
            "id": "rtb-08e2be5651d703b68",
            "owner_id": "632653723581",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-025e7e615a2f92e7b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00819df1d4b2634c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3a8e3cd84821b6b",
            "route_table_id": "rtb-0a534a558f7ce0883",
            "subnet_id": "subnet-0bb3ac36867d76b94"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-sub1",
            "aws_subnet.public-sub1",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dea3b0acdd6d2f72",
            "route_table_id": "rtb-0a534a558f7ce0883",
            "subnet_id": "subnet-08d3b65dac20a4bbf"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-sub2",
            "aws_subnet.public-sub1",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b64365570eac6de",
            "route_table_id": "rtb-08e2be5651d703b68",
            "subnet_id": "subnet-05be315999c20fa64"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public-sub1",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0073bdf9d84e1a509",
            "route_table_id": "rtb-08e2be5651d703b68",
            "subnet_id": "subnet-0ce36f59d9c82a0a2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public-sub2",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632653723581:subnet/subnet-0bb3ac36867d76b94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb3ac36867d76b94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "632653723581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sub1"
            },
            "tags_all": {
              "Name": "private-sub1"
            },
            "vpc_id": "vpc-00819df1d4b2634c6"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632653723581:subnet/subnet-08d3b65dac20a4bbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d3b65dac20a4bbf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "632653723581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sub2"
            },
            "tags_all": {
              "Name": "private-sub2"
            },
            "vpc_id": "vpc-00819df1d4b2634c6"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632653723581:subnet/subnet-05be315999c20fa64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05be315999c20fa64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "632653723581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub1"
            },
            "tags_all": {
              "Name": "public-sub1"
            },
            "vpc_id": "vpc-00819df1d4b2634c6"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632653723581:subnet/subnet-0ce36f59d9c82a0a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce36f59d9c82a0a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "632653723581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub2"
            },
            "tags_all": {
              "Name": "public-sub2"
            },
            "vpc_id": "vpc-00819df1d4b2634c6"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632653723581:vpc/vpc-00819df1d4b2634c6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0591d88c32989d113",
            "default_route_table_id": "rtb-0c7af0e8a7fe7baff",
            "default_security_group_id": "sg-05e384023321174ff",
            "dhcp_options_id": "dopt-06a009c85a782a8c7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00819df1d4b2634c6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7af0e8a7fe7baff",
            "owner_id": "632653723581",
            "tags": {
              "Name": "test"
            },
            "tags_all": {
              "Name": "test"
            }
          }
        }
      ]
    }
  ]
}